--- a/inner.html
+++ b/inner.html
@@ -7,7 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic,cyrillic-ext"
     rel="stylesheet">
-  <link type="text/css" href="css/style-min.css" rel="stylesheet">
+  <link type="text/css" href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="page-header aligning">
-      <p class="slogan">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
+      <p class="slogan">Интернет-магазин строительных&nbsp;материалов и&nbsp;инструментов для ремонта</p>
 
       <div class="contacts-header">
         <div><a href="tel:+78125550555" class="icon-phone">+7 (812) 555-05-55</a></div>
@@ -201,12 +201,12 @@
           </thead>
           <tbody>
             <tr class="product-item">
-              <td class="product-photo"><img src="img/perforator_1.png" alt="BOSCH BFG 3000" width="218" height="170">
+              <td class="product-photo"><img src="img/perforator_2.png" alt="BOSCH BFG 3000" width="218" height="170">
               </td>
-              <td class="product-name">Перфоратор BOSCH BFG 3000</td>
+              <td class="product-name">Перфоратор BOSCH BFG 6000</td>
               <td class="product-mark"></td>
-              <td class="product-price-special">22500 Р.</td>
-              <td class="product-price">15500 Р.</td>
+              <td class="product-price-special">30500 Р.</td>
+              <td class="product-price">25500 Р.</td>
               <td class="product-availability">
                 <a class="buy-link availability-buy" href="#buy-popup"> Купить </a>
                 <a class="bookmarks-link availability-bookmarks" href="#nowhere"> В закладки </a>
@@ -225,12 +225,12 @@
               </td>
             </tr>
             <tr class="product-item">
-              <td class="product-photo"><img src="img/perforator_3.png" alt="BOSCH BFG 2000" width="218" height="170">
+              <td class="product-photo"><img src="img/perforator_2.png" alt="BOSCH BFG 2000" width="218" height="170">
               </td>
-              <td class="product-name">Перфоратор BOSCH BFG 2000</td>
+              <td class="product-name">Перфоратор BOSCH BFG 6000</td>
               <td class="product-mark">New</td>
-              <td class="product-price-special"></td>
-              <td class="product-price">12500 Р.</td>
+              <td class="product-price-special">30500 Р.</td>
+              <td class="product-price">25500 Р.</td>
               <td class="product-availability">
                 <a class="buy-link availability-buy open-buy-alert" href="#buy-popup"> Купить </a>
                 <a class="bookmarks-link availability-bookmarks" href="#nowhere"> В закладки </a>
@@ -240,7 +240,7 @@
               <td class="product-photo"><img src="img/perforator_1.png" alt="BOSCH BFG 3000" width="218" height="170">
               </td>
               <td class="product-name">Перфоратор BOSCH BFG 3000</td>
-              <td class="product-mark"></td>
+              <td class="product-mark">New</td>
               <td class="product-price-special">22500 Р.</td>
               <td class="product-price">15500 Р.</td>
               <td class="product-availability">
@@ -252,7 +252,7 @@
               <td class="product-photo"><img src="img/perforator_2.png" alt="BOSCH BFG 6000" width="218" height="170">
               </td>
               <td class="product-name">Перфоратор BOSCH BFG 6000</td>
-              <td class="product-mark">New</td>
+              <td class="product-mark"></td>
               <td class="product-price-special">30500 Р.</td>
               <td class="product-price">25500 Р.</td>
               <td class="product-availability">
@@ -264,7 +264,7 @@
               <td class="product-photo"><img src="img/perforator_3.png" alt="BOSCH BFG 2000" width="218" height="170">
               </td>
               <td class="product-name">Перфоратор BOSCH BFG 2000</td>
-              <td class="product-mark"></td>
+              <td class="product-mark">New</td>
               <td class="product-price-special"></td>
               <td class="product-price">12500 Р.</td>
               <td class="product-availability">
@@ -300,7 +300,7 @@
               <td class="product-photo"><img src="img/perforator_3.png" alt="BOSCH BFG 2000" width="218" height="170">
               </td>
               <td class="product-name">Перфоратор BOSCH BFG 2000</td>
-              <td class="product-mark"></td>
+              <td class="product-mark">New</td>
               <td class="product-price-special"></td>
               <td class="product-price">12500 Р.</td>
               <td class="product-availability">
@@ -343,7 +343,7 @@
       <div class="aligning">
         <h2 class="content-caption-h2">Пара слов о перфораторах</h2>
 
-        <p class="content-text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br> Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+        <p class="content-text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br> Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В&nbsp;ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
       </div>
     </section>
   </div>
