--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Техномарт - инструменты, техника, материалы</title>
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
-  <link type="text/css" href="css/style-min.css" rel="stylesheet">
+  <link type="text/css" href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
     </div>
 
     <div class="page-header aligning">
-      <p class="slogan">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
+      <p class="slogan">Интернет-магазин строительных&nbsp;материалов и&nbsp;инструментов для ремонта</p>
 
       <div class="contacts-header">
         <div><a href="tel:+78125550555" class="icon-phone">+7 (812) 555-05-55</a></div>
@@ -175,7 +175,7 @@
               <td class="product-photo"><img src="img/perforator_1.png" alt="BOSCH BFG 3000" width="218" height="170">
               </td>
               <td class="product-name">Перфоратор BOSCH BFG 3000</td>
-              <td class="product-mark"></td>
+              <td class="product-mark">New</td>
               <td class="product-price-special">22500 Р.</td>
               <td class="product-price">15500 Р.</td>
               <td class="product-availability">
@@ -198,7 +198,7 @@
             <tr class="product-item">
               <td class="product-photo"><img src="img/perforator_3.png" alt="BOSCH BFG 2000" width="218" height="170">
               </td>
-              <td class="product-name">Перфоратор BOSCH BFG 6000</td>
+              <td class="product-name">Перфоратор BOSCH BFG 2000</td>
               <td class="product-mark">New</td>
               <td class="product-price-special"></td>
               <td class="product-price">12500 Р.</td>
