Мини-правка по Б1

--- a/index.html
+++ b/index.html
@@ -212,6 +212,21 @@
       </section>
     </div>
 
+    <div class="popup popup-buy-alert" hidden>
+      <div class="popup-content">
+        <button class="popup-close" type="button">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+        <div class="buy-alert" id="buy-alert">
+          <p class="buy-alert-message">Товар добавлен в корзину!</p>
+          <div class="buy-alert-button submit-popup">
+            <a class="button button-order" href="#nowhere">Оформить заказ</a>
+            <button class="button-skip" type="button">Продолжить покупки</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="aligning">
       <section>
         <div class="caption-button">
